# litellm-proxy-headroom

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_analytics_foundation.py
config/: headroom_litellm_callback.py  litellm.yaml
docs/: agent-cli-support.md  analytics-backend.md  analytics-observability-evidence.md  harness-engineering.md  integration-principles.md  multi-cli-proof-contract.md
scripts/: codex_account_snapshot.py  collect_multi_cli_proof.py  e2e_agent90_usefulness.py  e2e_analytics_smoke.py  e2e_chatgpt_headroom.py  e2e_dashboard_stats_smoke.py  e2e_headroom_ccr_smoke.py  e2e_litellm_buffer_smoke.py  e2e_mcp_otel_smoke.py  e2e_query_stats_smoke.py  e2e_simulation_smoke.py  install_remote_wrappers.py  mitm_codex_capture.py  mitmproxy_codex_full_capture.py  render_codex_session_html.py  report_codex_savings_proof.py  report_recent_codex_session.py  smoke_agent_cli_wrappers.py  update_litellm_models.py
src/litellm_proxy_headroom/: __init__.py  app.py  litellm_app.py  settings.py
src/litellm_proxy_headroom/agent_cli/: __init__.py  managed_home.py
src/litellm_proxy_headroom/analytics/: __init__.py
src/litellm_proxy_headroom/analytics/adapters/: __init__.py
src/litellm_proxy_headroom/analytics/adapters/api/: __init__.py  app.py  ccr_mapping.py  dashboard_query.py  dashboard_view.py  deps.py  dto.py  mcp.py  query_params.py  retrieval.py  routes.py  routes_chunks.py  routes_dashboard.py  routes_headroom_ccr.py  routes_health.py  routes_ingest.py  routes_records.py  routes_simulations.py  routes_stats.py
src/litellm_proxy_headroom/analytics/adapters/headroom/: __init__.py  ccr_backend.py  hooks.py
src/litellm_proxy_headroom/analytics/adapters/litellm/: __init__.py  callback.py  http_client.py  trace_mapping.py  (+1 more)
src/litellm_proxy_headroom/analytics/application/: __init__.py  buffering.py  commands.py  dashboard_schemas.py  query_filters.py  read_models.py  schemas.py  services.py  simulation_schemas.py
src/litellm_proxy_headroom/analytics/domain/: __init__.py  chunks.py  compression.py  economics.py  ports.py  provider_usage.py  simulation.py  types.py
tests/: test_agent90_usefulness_harness.py  test_agent_cli_managed_home.py  test_agent_cli_wrappers.py  test_app_import.py  test_codex_savings_report.py  test_compose.py  test_config.py  test_headroom_callback_adapter.py  test_headroom_callback_shim.py  test_litellm_app.py  test_mitm_codex_capture.py  test_multi_cli_proof_collector.py  test_remote_wrapper_installer.py  test_settings.py  test_smoke_agent_cli_wrappers.py  test_update_litellm_models.py
tests/analytics/: test_buffering_failure_modes.py  test_dashboard_contracts.py  test_dashboard_stats_smoke_payload.py  test_data_scope_filters.py  test_http_client_failure_modes.py  test_litellm_usage_mapping.py  test_mcp_contracts.py  test_otel_setup.py  test_otel_trace_story.py  test_simulation_calculation.py
tests/fixtures/: litellm_responses_payload_shape.json  responses_cache_hot_zone_repeated.json
(+39 files in other folders)
