[project]
name = "litellm-proxy-headroom"
version = "0.1.0"
description = "Minimal LiteLLM proxy setup with ChatGPT provider and Headroom compression."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.110.0",
    "fastmcp>=2.0.0",
    "grpcio>=1.81.1",
    "headroom-ai[mcp,proxy]==0.27.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "litellm[proxy]",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "pydantic>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litellm_proxy_headroom"]

[project.entry-points."headroom.ccr_backend"]
analytics-postgres = "litellm_proxy_headroom.analytics.adapters.headroom.ccr_backend:create_analytics_ccr_backend"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
